Fent Recipe Tweak 2 (#244)
* Fent Recipe Tweak 2

* Alt recipe

--- a/Resources/Prototypes/_Mono/Recipes/Reactions/medicine.yml
+++ b/Resources/Prototypes/_Mono/Recipes/Reactions/medicine.yml
@@ -3,15 +3,36 @@
   minTemp: 475
   reactants:
     SpaceDrugs:
-      amount: 2
+      amount: 1
     Desoxyephedrine:
-      amount: 1
-    Plasma:
-      amount: 1
+      amount: 2
     Oil:
       amount: 1
+    SodiumHydroxide:
+      amount: 0.5
+    Phenol:
+      amount: 0.5
+    Kelotane:
+      amount: 0.5
   products:
-    Fentanyl: 5
+    Fentanyl: 7.5
+
+- type: reaction
+  id: FentanylVestine
+  minTemp: 435
+  reactants:
+    SpaceDrugs:
+      amount: 2
+    Desoxyephedrine:
+      amount: 2
+    SodiumHydroxide:
+      amount: 0.5
+    Phenol:
+      amount: 0.5
+    Vestine:
+      amount: 1
+  products:
+    Fentanyl: 10
 
 - type: reaction
   id: FentanylSolidification
