Fent od changes and breakable fent (#254)
* lessen the OD of fentanyl

* All my fent... Gone....

* catalyst tricord

--- a/Resources/Prototypes/_Mono/Entities/Objects/solids.yml
+++ b/Resources/Prototypes/_Mono/Entities/Objects/solids.yml
@@ -2,7 +2,7 @@
   name: fentanyl crystal
   parent: [ BaseItem, BaseC3ChemContraband ]
   id: FentanylSolidified
-  description: 5u of Fentanyl solidified with Tricordrazine. Worth a lot. Does not refund the Tricordrazine when grinded.
+  description: 5u of Fentanyl solidified with Tricordrazine. Worth a lot.
   components:
   - type: Sprite
     sprite: _Mono/Objects/Misc/fentanyl.rsi
@@ -24,3 +24,20 @@
         reagents:
         - ReagentId: Fentanyl
           Quantity: 5
+  - type: DamageOnLand
+    damage:
+      types:
+        Blunt: 5
+  - type: Damageable
+    damageContainer: Inorganic
+  - type: Destructible
+    thresholds:
+    - trigger:
+        !type:DamageTrigger
+        damage: 5
+      behaviors:
+      - !type:PlaySoundBehavior
+        sound:
+          collection: GlassBreak
+      - !type:DoActsBehavior
+        acts: [ "Destruction" ]
