--- a/Resources/Prototypes/_Mono/Recipes/Reactions/medicine.yml
+++ b/Resources/Prototypes/_Mono/Recipes/Reactions/medicine.yml
@@ -44,6 +44,8 @@
       amount: 5
     Tricordrazine:
       amount: 2
+  products:
+    Tricordrazine: 2
   effects:
   - !type:CreateEntityReactionEffect
     entity: FentanylSolidified
