make fent great again (#715)

--- a/Resources/Prototypes/_Mono/Entities/Objects/solids.yml
+++ b/Resources/Prototypes/_Mono/Entities/Objects/solids.yml
@@ -10,7 +10,7 @@
   - type: Item
     size: Tiny
   - type: StaticPrice
-    price: 2750
+    price: 2500 # People can consistently pump out a million in less than an hour of fent production, fuck that.
   - type: Food
   - type: FlavorProfile
     flavors:
@@ -41,3 +41,5 @@
           collection: GlassBreak
       - !type:DoActsBehavior
         acts: [ "Destruction" ]
+  - type: PirateBountyItem
+    id: FentanylCrystal
