--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
@@ -212,6 +212,7 @@
     idleState: icon
     runningState: icon
     staticPacks:
+    - GoobWeaponAmmo
     - NFMercenaryTechfabDeprecatedStatic
     - NfsdPracticeStatic
   - type: BlueprintReceiver
