--- a/Resources/Prototypes/_Nuclear14/Entities/Objects/Weapons/Guns/Ammunition/Boxes/latherecipe.yml
+++ b/Resources/Prototypes/_Nuclear14/Entities/Objects/Weapons/Guns/Ammunition/Boxes/latherecipe.yml
@@ -7,6 +7,20 @@
     Steel: 1000
 
 - type: latheRecipe
+  id: MagazineLightRifleSubsonic
+  result: MagazineLightRifleSubsonic
+  completetime: 5
+  materials:
+    Steel: 500
+
+- type: latheRecipe
+  id: MagazineBoxLightRifleSubsonic
+  result: MagazineBoxLightRifleSubsonic
+  completetime: 5
+  materials:
+    Steel: 1000
+
+- type: latheRecipe
   id: MagazineBox556
   result: MagazineBox556
   completetime: 5
