--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -515,6 +515,9 @@
       idleState: icon
       runningState: icon
       staticPacks:
+      - GoobWeaponAmmo
+      - N14AmmoPack
+      - RMCAmmoPack
       - NfsdAmmoStatic # Frontier: SecurityAmmoStatic<NfsdAmmoStatic
     - type: MaterialStorage
       whitelist:
