--- a/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/Shotguns/shotguns.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/Shotguns/shotguns.yml
@@ -87,7 +87,7 @@
   - type: Clothing
     sprite: _DV/Objects/Weapons/Guns/Shotguns/sawn.rsi
   - type: Item
-    size: Normal
+    size: Small
   - type: BallisticAmmoProvider
     capacity: 2
   - type: NFWeaponDetails
