--- a/Resources/Prototypes/_Lua/Entities/Objects/Weapons/Guns/SpaceArtillery/Ammunition/Projectiles/Energy/projectiles.yml
+++ b/Resources/Prototypes/_Lua/Entities/Objects/Weapons/Guns/SpaceArtillery/Ammunition/Projectiles/Energy/projectiles.yml
@@ -31,9 +31,40 @@
     layers:
       - state: base-projectile
   - type: RadarBlip
-    scale: 0.35
+    scale: 1.35
     requireNoGrid: true
     shape: triangle
   - type: TimedDespawn
     lifetime: 20
   - type: ShipWeaponProjectile
+
+- type: hitscan
+  id: RedHeavyLaserSyndie
+  maxLength: 200
+  damage:
+    types:
+      Heat: 20
+      Structural: 10
+  muzzleFlash:
+    sprite: Objects/Weapons/Guns/Projectiles/projectiles.rsi
+    state: muzzle_beam_heavy
+  travelFlash:
+    sprite: Objects/Weapons/Guns/Projectiles/projectiles.rsi
+    state: beam_heavy
+  impactFlash:
+    sprite: Objects/Weapons/Guns/Projectiles/projectiles.rsi
+    state: impact_beam_heavy
+
+- type: entity
+  name: tesla gun lightning
+  id: TeslaGunTurretBullet
+  parent: [TeslaGunBullet, BaseBullet]
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: ShipWeaponProjectile
+  - type: RadarBlip
+    scale: 2.5
+    requireNoGrid: true
+    shape: triangle
+  - type: TimedDespawn
+    lifetime: 20
