--- a/Resources/Prototypes/_Lua/Entities/Objects/Weapons/Guns/SpaceArtillery/Ballistic/105mm.yml
+++ b/Resources/Prototypes/_Lua/Entities/Objects/Weapons/Guns/SpaceArtillery/Ballistic/105mm.yml
@@ -4,10 +4,10 @@
 
 - type: entity
   parent: BaseWeaponNavalBallisctic
-  id: Weapon105mmBase
+  id: Weapon105mm
   name: Миномёт "105мм"
   description: Малый миномёт, использует снаряды 105мм.
-  suffix: НЕ МАППИТЬ!, ShuttleGun
+  suffix: ShuttleGun
   placement:
     mode: SnapgridCenter
   components:
@@ -19,65 +19,38 @@
       drawdepth: Mobs
       layers:
         - state: turrets105mm
-    - type: ItemSlots
-      slots:
-        gun_magazine:
-          whitelist:
-            tags:
-              - MagazineBox105mm
-        gun_chamber:
-          whitelist:
-            tags:
-              - Cartridge105mm
+    - type: ContainerContainer
+      containers:
+        machine_board: !type:Container
+        machine_parts: !type:Container
     - type: Gun
-      fireRate: 0.1
+      fireRate: 1
       projectileSpeed: 60
       selectedMode: FullAuto
       availableModes:
         - FullAuto
       soundGunshot: /Audio/Weapons/Guns/Gunshots/gun_sentry.ogg
-    - type: ChamberMagazineAmmoProvider
-      boltClosed: null
-    - type: ContainerContainer
-      containers:
-        gun_magazine: !type:ContainerSlot
-        gun_chamber: !type:ContainerSlot
-        machine_board: !type:Container
-        machine_parts: !type:Container
-
-- type: entity
-  parent: Weapon105mmBase
-  id: Weapon105mm
-  suffix: НЕ МАППИТЬ!, Полный, ShuttleGun
-  placement:
-    mode: SnapgridCenter
-  components:
-    - type: ItemSlots
-      slots:
-        gun_magazine:
-          startingItem: MagazineBox105mmAP
-          whitelist:
-            tags:
-              - MagazineBox105mm
-        gun_chamber:
-          startingItem: Cartridge105mm
-          whitelist:
-            tags:
-              - Cartridge105mm
-
-- type: entity
-  parent: [BaseStructureDisableToolUse, Weapon105mm, Weapon105mmBase]
-  id: Weapon105mmUnanchor
-  suffix: Полный, Неоткрепляемый для кораблей, ShuttleGun
-  placement:
-    mode: SnapgridCenter
-
-- type: entity
-  parent: [BaseStructureDisableToolUse, Weapon105mmBase]
-  id: Weapon105mmUnanchorEmpty
-  suffix: Пустой, Неоткрепляемый для кораблей, ShuttleGun
-  placement:
-    mode: SnapgridCenter
+    - type: Battery
+      maxCharge: 300
+      startingCharge: 300
+    - type: ExaminableBattery
+    - type: AutoShootGun
+    - type: GunSignalControl
+    - type: WirelessNetworkConnection
+      range: 700
+    - type: DeviceLinkSink
+      ports:
+      - Toggle
+    - type: SpaceArtillery
+      powerChargeRate: 50
+      powerUseActive: 1
+      powerUsePassive: 1100
+    - type: BatterySelfRecharger
+      autoRecharge: true
+      autoRechargeRate: 50
+    - type: ProjectileBatteryAmmoProvider
+      proto: Bullet105mm
+      fireCost: 150
 
 - type: entity
   parent: BaseNFFlatpack
@@ -86,7 +59,7 @@
   description: Упакованный Малый Миномёт (.105мм)
   components:
   - type: Flatpack
-    entity: Weapon105mmBase
+    entity: Weapon105mm
   - type: StaticPrice
     price: 250
   - type: Sprite
