--- a/Resources/Prototypes/_Lua/Entities/Objects/Weapons/Guns/SpaceArtillery/Energy/syndielaser.yml
+++ b/Resources/Prototypes/_Lua/Entities/Objects/Weapons/Guns/SpaceArtillery/Energy/syndielaser.yml
@@ -6,7 +6,7 @@
   parent: [BaseWeaponNavalEnergy, BaseStructure]
   id: WeaponTurretBaseLaserSyndie
   name: Лазер S
-  suffix: НЕ МАППИТЬ!, ShuttleGun
+  suffix: ShuttleGun
   abstract: true
   components:
     - type: RadarBlip
@@ -71,27 +71,8 @@
 - type: entity
   parent: WeaponTurretBaseLaserSyndie
   id: WeaponTurretLaserSyndie
-  suffix: ЯО, Ивентовая, Авто/ручная, ShuttleGun
+  suffix: ЯО, Ивентовая, ShuttleGun
   components:
-  - type: ChamberMagazineAmmoProvider
-    boltClosed: null
   - type: NpcFactionMember
     factions:
     - Syndicate
-
-- type: hitscan
-  id: RedHeavyLaserSyndie
-  maxLength: 200
-  damage:
-    types:
-      Heat: 20
-      Structural: 10
-  muzzleFlash:
-    sprite: Objects/Weapons/Guns/Projectiles/projectiles.rsi
-    state: muzzle_beam_heavy
-  travelFlash:
-    sprite: Objects/Weapons/Guns/Projectiles/projectiles.rsi
-    state: beam_heavy
-  impactFlash:
-    sprite: Objects/Weapons/Guns/Projectiles/projectiles.rsi
-    state: impact_beam_heavy
