--- a/Resources/Prototypes/_Lua/Entities/Objects/Weapons/Guns/SpaceArtillery/Energy/teslaturret.yml
+++ b/Resources/Prototypes/_Lua/Entities/Objects/Weapons/Guns/SpaceArtillery/Energy/teslaturret.yml
@@ -7,7 +7,7 @@
   id: TeslaTurretBase
   name: Тесла
   description: Тесла турель, использует для питания энергоячейки тесла турели.
-  suffix: НЕ МАППИТЬ!, ShuttleGun
+  suffix: ShuttleGun
   placement:
     mode: SnapgridCenter
   components:
@@ -16,21 +16,8 @@
       scale: 1
     - type: ContainerContainer
       containers:
-        gun_magazine: !type:ContainerSlot
         machine_board: !type:Container
         machine_parts: !type:Container
-    - type: ItemSlots
-      slots:
-        gun_magazine:
-          name: Magazine
-          insertSound: /Audio/Weapons/Guns/MagIn/batrifle_magin.ogg
-          ejectSound: /Audio/Weapons/Guns/MagOut/batrifle_magout.ogg
-          whitelist:
-            tags:
-              - PowerCartridgeTesla
-    - type: MagazineAmmoProvider
-    - type: ChamberMagazineAmmoProvider
-      boltClosed: null
     - type: Sprite
       sprite: _Lua/Objects/Weapons/Guns/Turrets/teslaturret.rsi
       drawdepth: Mobs
@@ -39,7 +26,7 @@
         - state: teslaturret
           sprite: _Lua/Objects/Weapons/Guns/Turrets/teslaturret.rsi
     - type: Gun
-      fireRate: 0.2
+      fireRate: 0.4
       projectileSpeed: 22
       selectedMode: FullAuto
       availableModes:
@@ -48,6 +35,27 @@
         path: /Audio/Effects/Lightning/lightningshock.ogg
         params:
           variation: 0.2
+    - type: Battery
+      maxCharge: 1050
+      startingCharge: 1050
+    - type: ExaminableBattery
+    - type: AutoShootGun
+    - type: GunSignalControl
+    - type: WirelessNetworkConnection
+      range: 700
+    - type: DeviceLinkSink
+      ports:
+      - Toggle
+    - type: SpaceArtillery
+      powerChargeRate: 3
+      powerUseActive: 3
+      powerUsePassive: 15100
+    - type: BatterySelfRecharger
+      autoRecharge: true
+      autoRechargeRate: 3
+    - type: ProjectileBatteryAmmoProvider
+      proto: TeslaGunTurretBullet
+      fireCost: 150
 
 - type: entity
   parent: [BaseStructureDisableToolUse, TeslaTurretBase]
