--- a/Resources/Prototypes/_ADT/Entities/Clothing/Neck/Cloaks.yml
+++ b/Resources/Prototypes/_ADT/Entities/Clothing/Neck/Cloaks.yml
@@ -60,3 +60,13 @@
   components:
   - type: Sprite
     sprite: ADT/Clothing/Neck/Cloaks/nukeops_cloak.rsi #спрайты от floppo4ka
+
+- type: entity
+  parent: ClothingNeckBase
+  id: ADTClothingNeckPyotrCloak
+  name: dark green cloak
+  suffix: Big_Chungus
+  description: Silky and imposing knight's cloak. For the honor of the crown!
+  components:
+  - type: Sprite
+    sprite: ADT/Clothing/Neck/Cloaks/pyotr_cloak.rsi
