--- a/Resources/Prototypes/_ADT/Entities/Clothing/OuterClothing/pyotr_coat.yml
+++ b/Resources/Prototypes/_ADT/Entities/Clothing/OuterClothing/pyotr_coat.yml
@@ -33,3 +33,22 @@
         Slash: 0.8
         Piercing: 0.7
         Heat: 0.8
+
+- type: entity
+  parent: ClothingOuterStorageBase
+  id: ADTClothingOuterCoatPyotr
+  name: dark green coat
+  description: This dark green coat is heavier than look
+  suffix: Big_Chungus
+  components:
+  - type: Sprite
+    sprite: ADT/Clothing/OuterClothing/Coats/pyotr_coat.rsi
+  - type: Clothing
+    sprite: ADT/Clothing/OuterClothing/Coats/pyotr_coat.rsi
+  - type: Armor
+    modifiers:
+      coefficients:
+        Blunt: 0.2
+        Slash: 0.1
+        Piercing: 0.1
+        Heat: 0.8
