--- a/Resources/Maps/_Lua/Shuttles/SD/hevish.yml
+++ b/Resources/Maps/_Lua/Shuttles/SD/hevish.yml
@@ -4,8 +4,8 @@ meta:
   engineVersion: 255.1.0
   forkId: ""
   forkVersion: ""
-  time: 06/20/2025 16:14:25
-  entityCount: 4880
+  time: 06/21/2025 06:22:19
+  entityCount: 4881
 maps: []
 grids:
 - 1
@@ -1066,7 +1066,7 @@ entities:
             0: 53247
           2,0:
             0: 13107
-            3: 8
+            1: 8
           2,1:
             0: 13107
           2,2:
@@ -1078,14 +1078,14 @@ entities:
             0: 12767
             2: 32768
           2,4:
-            1: 1
+            3: 1
             2: 1636
           3,0:
-            3: 15
+            1: 15
           3,-1:
             2: 28740
             0: 17
-            3: 136
+            1: 136
           0,-4:
             0: 30591
           0,-5:
@@ -1127,17 +1127,17 @@ entities:
           3,-2:
             0: 4355
             2: 17408
-            3: 34816
+            1: 34816
           3,-5:
             0: 13107
             2: 2048
           -4,0:
-            3: 14
+            1: 14
           -4,-1:
             2: 49220
-            3: 34
+            1: 34
           -3,0:
-            3: 3
+            1: 3
             0: 34952
           -3,-1:
             2: 12288
@@ -1150,7 +1150,7 @@ entities:
             2: 17472
           -3,4:
             2: 3268
-            3: 32768
+            1: 32768
           -2,0:
             0: 62327
           -2,1:
@@ -1162,7 +1162,7 @@ entities:
           -2,-1:
             0: 32767
           -2,4:
-            1: 1
+            3: 1
             0: 26214
           -1,4:
             0: 62323
@@ -1172,12 +1172,12 @@ entities:
             0: 13107
           -1,-8:
             0: 34952
-            3: 256
+            1: 256
           0,-7:
             0: 32631
           -1,-7:
             0: 57308
-            1: 1
+            3: 1
           0,-6:
             0: 30583
           -1,-6:
@@ -1185,43 +1185,43 @@ entities:
           -1,-5:
             0: 64989
           1,-7:
-            1: 1
+            3: 1
             0: 65534
           1,-6:
             0: 56591
           1,-8:
-            3: 292
-            1: 9344
+            1: 292
+            3: 9344
             0: 51200
           1,-9:
-            3: 32768
+            1: 32768
           2,-8:
-            1: 1
+            3: 1
             0: 13106
             2: 2056
-            3: 32896
+            1: 32896
           2,-7:
             0: 13107
             2: 2056
-            3: 32896
+            1: 32896
           2,-6:
             0: 65299
             2: 8
           2,-9:
-            1: 8192
-            3: 33184
+            3: 8192
+            1: 33184
             2: 2056
           3,-8:
             2: 2817
-            3: 12336
+            1: 12336
           3,-7:
             2: 899
-            3: 12336
+            1: 12336
           3,-6:
             2: 32779
             0: 13056
           3,-9:
-            3: 39064
+            1: 39064
             2: 17733
           -4,-4:
             2: 32
@@ -1230,7 +1230,7 @@ entities:
             2: 8194
             0: 34952
           -4,-2:
-            3: 8704
+            1: 8704
             2: 17408
             0: 8
           -4,-5:
@@ -1253,52 +1253,52 @@ entities:
           -2,-5:
             0: 48047
           -4,-9:
-            3: 8738
+            1: 8738
             2: 17476
           -4,-8:
             2: 2560
-            3: 32896
+            1: 32896
           -4,-7:
             2: 2088
-            3: 32896
+            1: 32896
           -4,-6:
             2: 8202
             0: 34816
           -3,-8:
             2: 771
-            3: 12336
+            1: 12336
             0: 34952
           -3,-7:
             2: 771
-            3: 12336
+            1: 12336
             0: 34952
           -3,-6:
             2: 3
             0: 65288
           -3,-9:
-            3: 12464
-            1: 32768
+            1: 12464
+            3: 32768
             2: 771
           -2,-8:
-            1: 33825
+            3: 33825
             0: 29456
-            3: 132
+            1: 132
           -2,-7:
             0: 65535
           -2,-6:
             0: 30495
           -2,-9:
-            3: 8448
+            1: 8448
           -1,-9:
             0: 34952
           -4,-10:
-            3: 224
+            1: 224
             2: 3072
           -3,-10:
-            3: 12400
+            1: 12400
             2: 768
           -1,-12:
-            3: 16384
+            1: 16384
             0: 32768
           -1,-11:
             0: 34952
@@ -1306,16 +1306,16 @@ entities:
             0: 34952
           0,-12:
             0: 12288
-            3: 16384
+            1: 16384
           0,-11:
             0: 13107
           0,-10:
             0: 13107
           2,-10:
-            3: 32960
+            1: 32960
             2: 2048
           3,-10:
-            3: 4336
+            1: 4336
             2: 1792
           0,5:
             0: 63743
@@ -1331,7 +1331,7 @@ entities:
             0: 56797
           1,5:
             0: 21855
-            1: 128
+            3: 128
           1,6:
             0: 24581
           1,7:
@@ -1342,7 +1342,7 @@ entities:
             2: 4352
           2,6:
             2: 1
-            3: 16
+            1: 16
           0,9:
             0: 61007
           -1,9:
@@ -1394,14 +1394,14 @@ entities:
           1,15:
             0: 273
             2: 1092
-            3: 16384
+            1: 16384
           -2,5:
             0: 17486
             2: 4352
-            1: 32
+            3: 32
           -2,6:
             2: 1
-            3: 16
+            1: 16
             0: 49156
           -2,7:
             0: 52364
@@ -1442,7 +1442,7 @@ entities:
           1,19:
             0: 17
             2: 4096
-            3: 512
+            1: 512
           1,20:
             2: 4369
           0,21:
@@ -1452,7 +1452,7 @@ entities:
           -1,22:
             0: 49152
             2: 273
-            3: 4096
+            1: 4096
           0,23:
             0: 30310
           -1,23:
@@ -1460,53 +1460,53 @@ entities:
           0,24:
             0: 4369
             2: 16448
-            3: 1024
+            1: 1024
           1,21:
             2: 4369
           1,22:
             2: 273
-            3: 4096
+            1: 4096
           -2,13:
             2: 17476
           -2,14:
             2: 17476
           -2,15:
             2: 1092
-            3: 16384
+            1: 16384
           -2,19:
-            3: 2048
+            1: 2048
           -1,20:
             2: 4369
           0,25:
             0: 4369
-            3: 1028
+            1: 1028
             2: 16448
           0,26:
             0: 273
-            3: 132
+            1: 132
             2: 17408
           0,27:
             2: 20
-            3: 32
+            1: 32
           -1,27:
-            3: 128
+            1: 128
             2: 4
           1,24:
             2: 4368
           1,25:
             2: 4369
           1,26:
-            3: 1
+            1: 1
           -1,21:
             2: 4369
           -1,24:
             2: 20816
-            3: 1024
+            1: 1024
           -1,25:
             2: 20817
-            3: 1028
+            1: 1028
           -1,26:
-            3: 37
+            1: 37
             2: 17408
         uniqueMixes:
         - volume: 2500
@@ -1525,40 +1525,40 @@ entities:
           - 0
           - 0
         - volume: 2500
-          temperature: 293.15
-          moles:
-          - 1400.0662
-          - 5266.916
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-        - volume: 2500
-          temperature: 293.15
-          moles:
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-        - volume: 2500
           immutable: True
           moles:
           - 0
           - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+        - volume: 2500
+          temperature: 293.15
+          moles:
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+        - volume: 2500
+          temperature: 293.15
+          moles:
+          - 1400.0662
+          - 5266.916
           - 0
           - 0
           - 0
@@ -1599,6 +1599,19 @@ entities:
       shape: Ring
       scale: 0
       radarColor: '#00DEFEFF'
+    - type: CircularShieldRadar
+  - uid: 3368
+    components:
+    - type: MetaData
+    - type: Transform
+      pos: 0.49748507,16.73651
+      parent: 1
+    - type: RadarBlip
+      enabled: False
+      visibleFromOtherGrids: True
+      shape: Ring
+      scale: 0
+      radarColor: '#A200FFFF'
     - type: CircularShieldRadar
   - uid: 4484
     components:
@@ -14694,51 +14707,9 @@ entities:
       rot: -1.5707963267948966 rad
       pos: -2.5,0.5
       parent: 1
-- proto: CircularShieldBase
-  entities:
-  - uid: 1092
-    components:
-    - type: Transform
-      rot: 3.141592653589793 rad
-      pos: 0.5,16.5
-      parent: 1
-    - type: CircularShield
-      width: 6.283185307179586 rad
-    - type: Fixtures
-      fixtures:
-        fix1:
-          shape: !type:PolygonShape
-            radius: 0.01
-            vertices:
-            - -0.45,-0.45
-            - 0.45,-0.45
-            - 0.45,0.45
-            - -0.45,0.45
-          mask:
-          - Impassable
-          - TableLayer
-          - LowImpassable
-          layer:
-          - TableLayer
-          - LowImpassable
-          density: 60
-          hard: True
-          restitution: 0
-          friction: 0.4
-        ShieldFixture:
-          shape: !type:PhysShapeCircle
-            radius: 0
-            position: 0.49748507,16.73651
-          mask: []
-          layer:
-          - BulletImpassable
-          density: 1
-          hard: False
-          restitution: 0
-          friction: 0.4
 - proto: CircularShieldConsole
   entities:
-  - uid: 3368
+  - uid: 4881
     components:
     - type: Transform
       pos: 0.5,4.5
@@ -14748,6 +14719,13 @@ entities:
         1092:
         - - CircularShieldConsoleSender
           - CircularShieldConsoleReceiver
+- proto: CircularShieldLua
+  entities:
+  - uid: 1092
+    components:
+    - type: Transform
+      pos: 0.5,16.5
+      parent: 1
 - proto: ClosetEmergencyFilledRandom
   entities:
   - uid: 3620
