--- a/Resources/Prototypes/_Lua/Entities/Structures/shields.yml
+++ b/Resources/Prototypes/_Lua/Entities/Structures/shields.yml
@@ -4,6 +4,8 @@
   parent: [BaseStructureDisableToolUse, CircularShieldBase, BaseStructure]
   suffix: Lua, Theta, CircularShield
   components:
+    - type: Machine
+      board: MachineShieldPLTCircuitboard
     - type: CircularShield
       consumptionPerM2: 0.05
       maxWidth: 360
