--- a/Resources/Prototypes/_NF/Entities/Structures/Shuttles/thrusters.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Shuttles/thrusters.yml
@@ -7,7 +7,7 @@
   - type: Thruster
     baseThrust: 33
     thrust: 33
-    thrustPerPartLevel: [42.9, 56.1, 69.3, 82.5]
+    thrustPerPartLevel: [42.9, 56.1, 69.3, 82.5, 100]
     damage:
       types:
         Heat: 40
@@ -53,7 +53,7 @@
     requireSpace: false
     baseThrust: 250
     thrust: 250
-    thrustPerPartLevel: [250, 312.5, 375, 437.5]
+    thrustPerPartLevel: [250, 312.5, 375, 437.5, 460]
   - type: ApcPowerReceiver
     powerLoad: 200
   - type: Sprite
@@ -187,7 +187,7 @@
   - type: Thruster
     baseThrust: 250
     thrust: 250
-    thrustPerPartLevel: [250, 312.5, 375, 437.5]
+    thrustPerPartLevel: [250, 312.5, 375, 437.5, 460]
   - type: ApcPowerReceiver
     powerLoad: 200
   - type: Sprite
