--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/salvage.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/salvage.yml
@@ -1,6 +1,7 @@
 - type: vendingMachineInventory
   id: SalvageEquipmentInventory
   startingInventory:
+    WeaponPlasmaCutter: 6 # Lua PlasmaCutter
     Crowbar: 2
     Pickaxe: 4
     OreBag: 4
